<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    >


    <LinearLayout
        android:id="@+id/ll_function"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_1"
            android:textColor="@color/white"
            android:layout_marginBottom="19dp"
            android:layout_marginTop="17dp"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_1_start_sure"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="15dp"
            android:textSize="12sp"
            android:textColor="@color/white_60"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="13dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="105dp"
                android:layout_height="38dp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@drawable/dialog_left_bg"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/tv_start"
                android:layout_width="105dp"
                android:layout_height="38dp"
                android:text="@string/start"
                android:gravity="center"
                android:textColor="@color/black_bg"
                android:background="@drawable/dialog_right_bg"
                android:textSize="17sp"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_wait"
        android:layout_width="240dp"
        android:layout_height="170dp"
        android:background="@drawable/dialog_bg"
        android:visibility="gone"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:text="@string/formating"
            android:textSize="17sp"/>

    </RelativeLayout>

</RelativeLayout>
