<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="120dp"
    android:background="@color/color_white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            android:textColor="@color/theme_grey"
            android:text="@string/tips_pp_new" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="@color/theme_grey"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/confirm" />


        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:textColor="@color/theme_grey"
            android:layout_weight="1"
            android:text="@string/cancle" />

    </LinearLayout>

</LinearLayout>