<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="291dp"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:background="@drawable/rectangle_black_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:text="@string/wifi_name"/>

        <TextView
            android:id="@+id/tv_prefix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_prefix"
            android:textSize="12sp"
            android:textColor="@color/white"
            />

        <EditText
            android:id="@+id/tv_wifi_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@null"
            android:textSize="12sp"
            android:singleLine="true"
           />

    </LinearLayout>

    <LinearLayout
        android:layout_width="291dp"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle_black_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:text="@string/wifi_pwd"/>

        <EditText
            android:id="@+id/tv_wifi_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:background="@null"
            android:maxLength="20"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:hint="@string/input_pwd"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="291dp"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle_black_bg">

        <TextView
            android:id="@+id/tv_sure"
            android:layout_width="165dp"
            android:layout_height="31dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="12sp"
            android:background="@drawable/rectangle_white_bg"
            android:text="@string/wifi_sure"/>

    </LinearLayout>
</LinearLayout>
