<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:paddingTop="15dp"
            android:src="@mipmap/cha" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="216dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingEnd="30dp"
                android:paddingStart="30dp">

                <TextView
                    android:id="@+id/mode_1"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_marginTop="27dp"
                    android:background="@drawable/rectangle_bg"
                    android:gravity="center"
                    android:text="@string/mode_1"
                    android:textColor="@color/white"
                    android:visibility="gone"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/mode_2"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/mode_2"
                    android:textColor="@color/white_20"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/mode_3"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/mode_3"
                    android:textColor="@color/white_20"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/mode_4"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/mode_4"
                    android:textColor="@color/white_20"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/mode_5"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/mode_5"
                    android:textColor="@color/white_20"
                    android:textSize="17sp" />

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="45dp"
            android:layout_marginRight="43dp"
            android:layout_weight="1"
            android:background="@color/color_181818"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/mode_paofei" />

            <TextView
                android:id="@+id/tv_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:text="@string/mode_1_tips"
                android:textColor="@color/white_80"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="41dp"
                android:background="@drawable/rectangle_blue_bg"
                android:text="@string/mode_1_start"
                android:textColor="@color/white"
                android:textSize="12sp" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>
