<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="409dp"
        android:layout_height="244dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@drawable/dialog_checking_bg">

        <ImageView
            android:id="@+id/img_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:paddingRight="15dp"
            android:paddingTop="15dp"
            android:src="@mipmap/cha"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/os_update"
            android:gravity="center"
            android:textSize="17sp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"/>

        <LinearLayout
            android:id="@+id/ll_tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/uploading_tips"
                android:textColor="@color/white_60"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uploading_tips2"
                android:textColor="@color/white"
                android:layout_marginTop="25dp"
                android:textSize="12sp"/>

        </LinearLayout>


        <RelativeLayout
            android:layout_width="210dp"
            android:layout_height="38dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp">

            <ProgressBar
                android:id="@+id/progressBar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:indeterminate="false"
                android:max="100"
                android:progress="0"
                android:progressDrawable="@drawable/progressbarcolor"/>

            <TextView
                android:id="@+id/tv_download"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/uploading"
                android:textColor="@color/black_bg"
                android:gravity="center"
                android:textSize="14sp"
                android:layout_centerInParent="true"
                />

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>
